--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,13 +30,6 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
-# Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -179,3 +172,13 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+
+# Bind audio keys
+
+bindsym XF86AudioMute exec amixer set Master toggle
+bindsym XF86AudioLower exec amixer set Master 5%-
+bindsym XF86AudioRaise exec amixer set Master 5%+
+
+# Bind hotkeys
+
+bindsym $mod+Shift+f exec firefox
