--- a/.config/i3/config
+++ b/.config/i3/config
@@ -170,7 +170,8 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        font pango:Inconsolata 20
+        status_command ~/.config/bumblebee-status/bumblebee-status -m cpu memory disk datetime battery -p disk.path=/home datetime.format="%a, %b %d %Y | %H:%M:%S" interval=1 
 }
 
 # Bind audio keys
