--- a/.config/i3/config
+++ b/.config/i3/config
@@ -183,3 +183,9 @@ bindsym XF86AudioRaiseVolume exec amixer set Master 5%+
 # Bind hotkeys
 
 bindsym $mod+Shift+f exec firefox
+
+# Mail
+
+exec tmux new-session -d -s mail 'protonmail-bridge --cli'
+exec tmux new-session -d -s offlineimap 'offlineimap'
+
