--- a/.config/i3/config
+++ b/.config/i3/config
@@ -33,6 +33,9 @@ exec --no-startup-id nm-applet
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+# lock the session
+bindsym $mod+Escape exec dm-tool lock
+
 # start a terminal
 bindsym $mod+Return exec alacritty
 
