--- a/.offlineimaprc
+++ b/.offlineimaprc
@@ -37,7 +37,7 @@ holdconnectionopen = yes
 expunge = yes
 
 # sync only these folders
-folderfilter = lambda foldername: foldername in ['INBOX', 'Archive', 'Sent']
+folderfilter = lambda foldername: foldername in ['INBOX', 'Archive', 'Sent', 'Trash']
 
 # is broken, but connecting locally to bridge so should be ok
 ssl = no
