Add mail hotkey

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -186,6 +186,7 @@ bindsym XF86AudioRaiseVolume exec amixer set Master 5%+
 # Bind hotkeys
 
 bindsym $mod+Shift+f exec firefox
+bindsym $mod+Shift+m exec neomutt
 
 # Mail
 
