Add background image to i3

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -196,3 +196,6 @@ bindsym $mod+Shift+m exec alacritty --command neomutt
 exec tmux new-session -d -s mail 'protonmail-bridge --cli'
 exec tmux new-session -d -s offlineimap 'offlineimap'
 
+# Background
+
+exec ~/.fehbg &
