--- a/.config/i3/config
+++ b/.config/i3/config
@@ -199,3 +199,7 @@ exec tmux new-session -d -s offlineimap 'offlineimap'
 # Background
 
 exec ~/.fehbg &
+
+# Assign windows to workspaces
+
+assign [class="discord"] 10
