--- a/.config/i3/config
+++ b/.config/i3/config
@@ -40,7 +40,7 @@ bindsym $mod+Escape exec dm-tool lock
 bindsym $mod+Shift+Escape exec shutdown now
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec --no-startup-id alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -182,9 +182,9 @@ bar {
 
 # Bind audio keys
 
-bindsym XF86AudioMute exec amixer set Master toggle
-bindsym XF86AudioLowerVolume exec amixer set Master 3%-
-bindsym XF86AudioRaiseVolume exec amixer set Master 3%+
+bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 3%-
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 3%+
 
 # Bind hotkeys
 
