rename dsc and steam workspaces to respective logos

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -112,8 +112,8 @@ set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
-set $ws9 "9: stm"
-set $ws10 "10: dsc"
+set $ws9 ""
+set $ws10 ""
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
