Make discord and steam autostart

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -204,3 +204,8 @@ exec ~/.fehbg &
 
 assign [class="discord"] $ws10
 assign [class="Steam"] $ws9
+
+# Autostart
+
+exec --no-session-id steam
+exec --no-session-id discord
