--- a/.config/i3/config
+++ b/.config/i3/config
@@ -34,10 +34,10 @@ exec --no-startup-id nm-applet
 floating_modifier $mod
 
 # lock the session
-bindsym $mod+Escape exec dm-tool lock
+bindsym $mod+Escape exec --no-startup-id dm-tool lock
 
 # shutdown system
-bindsym $mod+Shift+Escape exec shutdown now
+bindsym $mod+Shift+Escape exec --no-startup-id shutdown now
 
 # start a terminal
 bindsym $mod+Return exec --no-startup-id alacritty
@@ -46,7 +46,7 @@ bindsym $mod+Return exec --no-startup-id alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec --no-startup-id dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -144,7 +144,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec --no-startup-id "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -193,12 +193,12 @@ bindsym $mod+Shift+m exec alacritty --command neomutt
 
 # Mail
 
-exec tmux new-session -d -s mail 'protonmail-bridge --cli'
-exec tmux new-session -d -s offlineimap 'offlineimap'
+exec --no-startup-id tmux new-session -d -s mail 'protonmail-bridge --cli'
+exec --no-startup-id tmux new-session -d -s offlineimap 'offlineimap'
 
 # Background
 
-exec ~/.fehbg &
+exec --no-startup-id ~/.fehbg &
 
 # Assign windows to workspaces
 
