--- a/.config/i3/config
+++ b/.config/i3/config
@@ -209,3 +209,17 @@ assign [class="Steam"] $ws9
 
 exec --no-startup-id steam
 exec --no-startup-id discord
+
+# Set colors
+set $bg-color            #2f343f
+set $text-color          #f3f4f5
+set $inactive-bg-color   #2f343f
+set $inactive-text-color #676767
+set $urgent-bg-color     #8B8B8B
+
+hide_edge_borders smart
+#                        border              background          text                  indicator
+client.focused           $bg-color           $bg-color           $text-color           #00ff00
+client.unfocused         $inactive-bg-color  $inactive-bg-color  $inactive-text-color  #00ff00
+client.focused_inactive  $inactive-bg-color  $inactive-bg-color  $inactive-text-color  #00ff00
+client.urgent            $urgent-bg-color    $urgent-bg-color    $text-color           #00ff00
