--- a/config
+++ b/config
@@ -231,4 +231,5 @@ assign [class="Steam"] $ws9
 exec --no-startup-id steam
 exec --no-startup-id discord
 exec --no-startup-id compton
+exec --no-startup-it network-manager-applet
 
