--- a/config
+++ b/config
@@ -114,6 +114,10 @@ set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9: "
 set $ws10 "10: "
+workspace $ws1 output DP-4
+workspace $ws2 output DVI-D-0
+workspace $ws9 output DP-4
+workspace $ws10 output DVI-D-0
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
