--- a/config
+++ b/config
@@ -236,3 +236,6 @@ exec --no-startup-id steam
 exec --no-startup-id discord
 exec --no-startup-id compton
 
+# for_window
+
+for_window [class='Alacritty'] floating enable
