--- a/config
+++ b/config
@@ -238,4 +238,4 @@ exec --no-startup-id compton
 
 # for_window
 
-for_window [class='Alacritty'] floating enable
+for_window [class="Alacritty"] floating enable
