--- a/config
+++ b/config
@@ -229,6 +229,7 @@ exec --no-startup-id feh --bg-fill /etc/lightdm/background
 
 assign [class="discord"] $ws10
 assign [class="Steam"] $ws9
+assign [title="Steam"] $ws9
 
 # Autostart
 
