--- a/config
+++ b/config
@@ -235,6 +235,7 @@ assign [class="Steam"] $ws9
 exec --no-startup-id steam
 exec --no-startup-id discord
 exec --no-startup-id compton
+exec --no-startup-id pulseaudio
 
 # for_window
 
