--- a/config
+++ b/config
@@ -236,7 +236,7 @@ assign [title="Steam"] $ws9
 exec --no-startup-id steam
 exec --no-startup-id discord
 exec --no-startup-id compton
-exec --no-startup-id pulseaudio
+exec --no-startup-id pulseaudio --start
 
 # for_window
 
