--- a/config
+++ b/config
@@ -215,6 +215,7 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 3%+
 
 bindsym $mod+Shift+Return exec firefox
 bindsym $mod+Shift+m exec --no-startup-id i3-sensible-terminal --command neomutt
+bindsym $mod+Shift+o exec --no-startup-id flameshot gui
 
 # Mail
 
