Enable floating for Thunar

--- a/config
+++ b/config
@@ -242,3 +242,4 @@ exec --no-startup-id pulseaudio --start
 # for_window
 
 for_window [class="Alacritty"] floating enable
+for_window [class="Thunar"] floating enable
