--- a/config
+++ b/config
@@ -243,3 +243,4 @@ exec --no-startup-id pulseaudio --start
 
 for_window [class="Alacritty"] floating enable
 for_window [class="Thunar"] floating enable
+for_window [class="feh"] floating enable
