--- a/config
+++ b/config
@@ -244,3 +244,4 @@ exec --no-startup-id pulseaudio --start
 for_window [class="Alacritty"] floating enable
 for_window [class="Thunar"] floating enable
 for_window [class="feh"] floating enable
+for_window [title="Friends List"] floating enable
