--- a/config
+++ b/config
@@ -238,7 +238,7 @@ assign [title="Steam"] $ws9
 exec --no-startup-id steam
 exec --no-startup-id discord
 exec --no-startup-id compton
-exec --no-startup-id pulseaudio --start
+exec --no-startup-id pulseaudio -D
 
 # for_window
 
