Extra status bar update

--- a/config
+++ b/config
@@ -202,7 +202,7 @@ bar {
                 urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
         }
         font pango:Inconsolata 16
-        status_command ~/.config/bumblebee-status/bumblebee-status -m cpu memory disk datetime -p memory.format="{percent:05.02f}%" disk.path=/home disk.format="{left}" datetime.format="%a, %b %d %Y | %H:%M:%S" interval=1 
+        status_command ~/.config/bumblebee-status/bumblebee-status -m cpu memory disk datetime pasink -p memory.format="{percent:05.02f}%" disk.path=/home disk.format="{left}" datetime.format="%a, %b %d %Y | %H:%M:%S" interval=1 
 }
 
 # Bind audio keys
