--- a/config
+++ b/config
@@ -248,3 +248,4 @@ for_window [class="feh"] floating enable
 for_window [title="Friends List"] floating enable
 for_window [class="Nvidia-settings"] floating enable
 for_window [class="Lxappearance"] floating enable
+for_window [class="Pavucontrol"] floating enable
