--- a/config
+++ b/config
@@ -243,6 +243,8 @@ exec --no-startup-id pasystray
 # for_window
 
 for_window [class="Alacritty"] floating enable
+for_window [class="Alacritty"] resize set width 60 ppt height 60ppt
+for_window [class="Alacritty"] move position center
 for_window [class="Thunar"] floating enable
 for_window [class="feh"] floating enable
 for_window [title="Friends List"] floating enable
