--- a/config
+++ b/config
@@ -246,6 +246,7 @@ for_window [class="Alacritty"] floating enable
 for_window [class="Alacritty"] resize set width 60 ppt height 60ppt
 for_window [class="Alacritty"] move position center
 for_window [class="Thunar"] floating enable
+for_window [class="Thunar"] move position center
 for_window [class="feh"] floating enable
 for_window [title="Friends List"] floating enable
 for_window [class="Nvidia-settings"] floating enable
