--- a/config
+++ b/config
@@ -218,6 +218,11 @@ bindsym $mod+Shift+m exec --no-startup-id i3-sensible-terminal --command neomutt
 bindsym $mod+Shift+o exec --no-startup-id flameshot gui
 bindsym $mod+p exec --no-startup-id thunar
 
+# General keybinds
+
+bindsym --whole-window $mod+button3 move scratchpad
+bindsym $mod+c scratchpad show
+
 # Mail
 
 exec --no-startup-id tmux new-session -d -s mail 'protonmail-bridge --cli'
