--- a/config
+++ b/config
@@ -244,6 +244,7 @@ assign [title="Steam"] $ws9
 exec --no-startup-id steam
 exec --no-startup-id discord
 exec --no-startup-id compton
+exec --no-startup-id alacritty --command ~/scripts/move_to_scratchpad
 
 # for_window
 
