--- a/config
+++ b/config
@@ -238,20 +238,21 @@ exec --no-startup-id feh --bg-fill /etc/lightdm/background
 assign [class="discord"] $ws10
 assign [class="Steam"] $ws9
 assign [title="Steam"] $ws9
-assign [title="Scratchpad terminal"] $ws9
+assign [title="Alacritty scratch"] $ws9
 
 # Autostart
 
 exec --no-startup-id steam
 exec --no-startup-id discord
 exec --no-startup-id compton
-exec --no-startup-id alacritty --title "Scratchpad terminal" --command ~/scripts/move_to_scratchpad
+exec_always --no-startup-id alacritty --title "Alacritty scratch" --command ~/scripts/move_to_scratchpad
 
 # for_window
 
 for_window [class="Alacritty"] floating enable
 for_window [class="Alacritty"] resize set width 60 ppt height 60 ppt
 for_window [class="Alacritty"] border none
+for_window [class="Alacritty"] move position center
 for_window [class="Thunar"] floating enable
 for_window [class="Thunar"] move position center
 for_window [class="feh"] floating enable
