--- a/config
+++ b/config
@@ -108,7 +108,7 @@ set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
 set $ws4 "4"
-set $ws5 "5:"
+set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
@@ -227,8 +227,9 @@ bindsym $mod+p exec --no-startup-id thunar
 
 # General keybinds
 
-bindsym --whole-window $mod+button3 move scratchpad
+#bindsym --whole-window $mod+button3 move scratchpad
 bindsym $mod+c [con_mark="scratchmark"] scratchpad show
+bindsym $mod+u [class="discord"] scratchpad show
 bindsym $mod+Control+c move position center
 
 # Mail
@@ -242,8 +243,8 @@ exec --no-startup-id feh --bg-fill /etc/lightdm/background
 
 # Assign windows to workspaces
 
-assign [class="discord"] $ws5
-assign [title="Alacritty scratch"] $ws5
+assign [class="discord"] $ws10
+assign [title="Alacritty scratch"] $ws10
 assign [class="Steam"] $ws10
 assign [title="Steam"] $ws10
 
@@ -260,6 +261,9 @@ for_window [class="Alacritty"] floating enable
 for_window [class="Alacritty"] resize set width 60 ppt height 60 ppt
 for_window [class="Alacritty"] border none
 for_window [class="Alacritty"] move position center
+for_window [class="discord"] resize set width 52 ppt height 55 ppt
+for_window [class="discord"] move position center
+for_window [class="discord"] move scratchpad
 for_window [class="Thunar"] floating enable
 for_window [class="Thunar"] move position center
 for_window [class="feh"] floating enable
