--- a/config
+++ b/config
@@ -272,3 +272,5 @@ for_window [title="Friends List"] floating enable
 for_window [class="Nvidia-settings"] floating enable
 for_window [class="Lxappearance"] floating enable
 for_window [class="Pavucontrol"] floating enable
+
+#WINFLOAT
