--- a/config
+++ b/config
@@ -264,6 +264,7 @@ for_window [class="Alacritty"] floating enable
 for_window [class="Alacritty"] resize set width 60 ppt height 60 ppt
 for_window [class="Alacritty"] border none
 for_window [class="Alacritty"] move position center
+for_window [class="firefox"] border none
 for_window [class="discord"] border none, move scratchpad
 for_window [class="Thunar"] floating enable
 for_window [class="Thunar"] move position center
