--- a/config
+++ b/config
@@ -234,7 +234,7 @@ bindsym $mod+p exec --no-startup-id thunar
 bindsym $mod+c [con_mark="scratchmark"] scratchpad show, resize set width 60 ppt height 60 ppt, move position center
 bindsym $mod+z exec --no-startup-id alacritty --title "Alacritty scratch" --command ~/scripts/move_to_scratchpad
 bindsym $mod+u [class="discord"] scratchpad show, resize set width 1500 px height 850 px, move position center
-bindsym $mod+i [class="Spotify"] scratchpad show, resize set width 1250 px height 685 px, move positino center
+bindsym $mod+i [class="Spotify"] scratchpad show, resize set width 1250 px height 685 px, move position center
 bindsym $mod+Control+Shift+u [class="discord"] move scratchpad
 bindsym $mod+Control+c move position center
 
@@ -283,4 +283,3 @@ for_window [class="Pavucontrol"] floating enable
 for_window [class="Spotify"] border none
 
 #WINFLOAT
-for_window [class="Spotify"] floating enable
