--- a/lightdm-mini-greeter.conf
+++ b/lightdm-mini-greeter.conf
@@ -4,7 +4,7 @@
 
 [greeter]
 # The user to login as.
-user = vinnie
+user = Vinnie
 # Whether to show the password input's label.
 show-password-label = true
 # The text of the password input's label.
