--- a/config
+++ b/config
@@ -235,6 +235,7 @@ bindsym $mod+z exec --no-startup-id alacritty --title "Alacritty scratch" --comm
 bindsym $mod+u [class="discord"] scratchpad show, resize set width 1500 px height 850 px, move position center
 bindsym $mod+i [class="Spotify"] scratchpad show, resize set width 1250 px height 685 px, move position center
 bindsym $mod+y [class="obs"] scratchpad show, resize set width 1500 px height 850 px, move position center
+
 bindsym $mod+Control+Shift+u [class="discord"] move scratchpad
 bindsym $mod+Control+Shift+i [class="Spotify"] move scratchpad
 bindsym $mod+Control+c move position center
@@ -279,4 +280,6 @@ for_window [class="Lxappearance"] floating enable
 for_window [class="Pavucontrol"] floating enable
 for_window [class="Spotify"] border none
 
+for_window [class="obs"] border none
+for_window [class="obs"] move scratchpad
 #WINFLOAT
